<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/my_title"
        layout="@layout/home_title_in" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_title"
        android:background="@color/vip_price_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/play"
                android:textColor="@color/black_hui1"
                android:textSize="14sp" />

            <include
                android:id="@+id/setting_item_rl3"
                layout="@layout/setting_item"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/cache"
                android:textColor="@color/black_hui1"
                android:textSize="14sp" />

            <include
                android:id="@+id/setting_item_rl5"
                layout="@layout/setting_item_text"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/about_me"
                android:textColor="@color/black_hui1"
                android:textSize="14sp" />

            <include
                android:id="@+id/setting_item_rl9"
                layout="@layout/setting_item_text"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <include
                android:id="@+id/setting_item_rl6"
                layout="@layout/setting_item_back"
                android:layout_width="match_parent"
                android:layout_marginTop="1px"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/setting_item_rl8"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/setting_user_close"
                android:textColor="@color/colore_home3"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
