<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/user_title"
        layout="@layout/user_title_in" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:layout_below="@id/user_title"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_vouchers_can_use"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:breakStrategy="balanced"
            android:gravity="center"
            android:text="@string/can_use_voucher"
            android:textColor="@color/red3" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="40px"
            android:layout_gravity="center"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_vouchers_has_use"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:breakStrategy="balanced"
            android:gravity="center_horizontal"
            android:text="@string/has_use_voucher"
            android:textColor="@color/orange" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="40px"
            android:layout_gravity="center"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_vouchers_expired"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:breakStrategy="balanced"
            android:gravity="center"
            android:text="@string/expired_voucher"
            android:textColor="@color/orange" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/linehui">

        <ListView
            android:id="@+id/lv_vouchers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24px" />

        <RelativeLayout
            android:id="@+id/rl_no_vouchers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/linehui"
            android:visibility="gone">

            <ImageView
                android:id="@+id/and_img"
                android:layout_width="280px"
                android:layout_height="280px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="78px"
                android:background="@mipmap/and_without" />

            <TextView
                android:id="@+id/tv_no_vouchers_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/and_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80px"
                android:gravity="center"
                android:text="@string/no_voucher"
                android:textColor="@color/colore_home3"
                android:textSize="28px" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
